Allow user registration

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,5 +5,8 @@
         <div class="navbar navbar-header">
             <a class="navbar-brand" href="/">Home</a>
         </div>
+        <ul class="nav navbar-nav">
+            <li><a href="/u/register">Register</a></li>
+        </ul>
     </div>
 </nav>
